<resources>
    <string name="app_name">CryptoApp</string>
    <string name="your_account">Your Account</string>
    <string name="hi_user">Hi User</string>
    <string name="user_profile_image">user\'s profile image</string>
    <string name="_1_4_eth_per_nft">-1.4 eth per nft</string>
    <string name="today_s_sellers">today\'s sellers</string>
    <string name="_156_nft">156 nft</string>
    <string name="_8_11">-8.11%</string>
    <string name="_196_eth">196 eth</string>
    <string name="_24k_volume">24k volume</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_Coins_fragment">Hello Coins fragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>